# youtube_to_text

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
server/: logger.py  main.py  schemas.py
server/routers/: api.py
server/services/: articleGenerator.py  gpt_requests.py
server/services/g4f/: __init__.py  models.py
server/services/g4f/Provider/: __init__.py
server/services/transcript/: fromWhisper.py  fromYoutube.py  pytube_fix.py  restorePunctuation.py  transcript_provider_abc.py  utils.py
