[tool.poetry]
name = "youtube-to-article"
version = "0.1.0"
description = ""
authors = ["LatikDesu <evga.abrosimov@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_to_article"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
