[tool.poetry]
name = "youtube-to-article"
version = "0.1.0"
description = ""
authors = ["LatikDesu <evga.abrosimov@gmail.com>"]
readme = "README.md"
packages = [{ include = "youtube_to_article" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
aiohttp = "^3.8.4"
browser-cookie3 = "^0.19.1"
requests = "^2.31.0"
pytube = "^15.0.0"
youtube-transcript-api = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
